--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -46,8 +46,8 @@
     \textbf{Materials and Methods:}
     As a pre-processing step, use a segmentation network to create a masked CXR
     images that only displays the lung areas. Replace base models in FLANNEL
-    with patch-based classifiers that take the image and respective mask as
-    their input. The patch-based classifiers will be used as the ensemble.
+    with patch-based classifiers that take masked image as input. The
+    patch-based classifiers are used for the ensemble.
 
     \textbf{Results:}
     We are able to reproduce FLANNEL with updated datasets. We created a
@@ -61,9 +61,9 @@
 
     \textbf{Discussion:}
     We saw improvement in metrics when training the base models and FLANNEL
-    ensemble in detecting COVID-19 images. Since no parameters were changed, we
-    suspect that this is due to the large increase of COVID-19 images for the
-    dataset in comparison to when the FLANNEL paper was written. When training
+    ensemble over updated dataset. Since no parameters were changed, we
+    suspect that this is due to the large increase of COVID-19 images in the
+    dataset compared to when the FLANNEL paper was written. When training
     the patch-based models, we noticed that some patch-based models slightly
     improved in performance while others slightly decreased but there were no
     major differences.
@@ -76,7 +76,7 @@
     patches, changing size of patch and more. However, it should be noted that
     the largest improvement in overall metrics when compared to the original
     FLANNEL with the old dataset is due to the updated dataset having a large
-    increase in Covid-19 images. This highlights how crucial getting quality
+    increase in COVID-19 images. This highlights how crucial getting quality
     data is to improve performance on models.
 
 \end{abstract}
@@ -175,7 +175,7 @@ radiologists in detection of COVID-19 in Chest CT images.
 
 \subsubsection{COVID-Net}
 
-Wang et al. are able to create COVID-Net [9] architecture by
+Wang et al. are able to create COVID-Net \cite{wang2020covidnet} architecture by
 considering COVIDx dataset which contains 13,975 CXR images for training and
 experiments. COVID-Net architecture makes heavy use of a lightweight residual
 ‘projection expansion projection extension’ (PPEX) design pattern that contains
@@ -311,7 +311,8 @@ stopping strategy was used based on the validation performance to prevent the
 model from overfitting.
 
 We then applied the trained FC-DenseNet103 segmentation model on the AP and PA
-CXR images from the COVID Chest X-ray and Kaggle X-ray datasets. The original
+CXR images from the COVID Chest X-ray and Kaggle X-ray datasets. These datasets now
+contains 478 COVID-19 and 5932 non-COVID CXR images. The original
 inference script provided by Park et. al would produce two outputs, a Numpy\footnote{
     \url{https://numpy.org/devdocs/reference/generated/numpy.lib.format.html}} format
 from the CXR and a Numpy format of the mask separating the lung
@@ -326,7 +327,9 @@ the CXR as which was done by Park et al. We then split the masked CXR dataset
 using a train-test ratio of 4:1 to randomly generate train test splits. To
 ensure reporting accurate performance on the base models, we used five fold
 cross validation while training. The detailed statistics are shown in Table
-\ref{table:datastats}.
+\ref{table:datastats}. In the same table, we also present statistics for old data
+that was used in FLANNEL paper \cite{10.1093/jamia/ocaa280} to show the improved
+distribution of COVID-19 images.
 
 \subsection{Base model training}
 The next improvement that we produced was creating patch-based classifiers.
@@ -343,8 +346,7 @@ produce a prediction. The confidence score was calculated for each category by
 calculating the percentage of predictions for each class based on the k patches.
 The optimization algorithm used during training was the Adam optimizer with a
 learning rate of 0.00001. An early stopping strategy based on validation
-performance was applied and a weight decay and L1 regularization were used to
-prevent overfitting. The best model is selected among 100 epochs training.
+performance was applied. The best model is selected among 100 epochs training.
 
 
 \subsection{Ensemble model learning}
@@ -476,7 +478,7 @@ The overall algorithm is shown in Algorithm \ref{algo:flannel-improved}.
 
 \section{Results}
 
-We chose 5 base models for FLANNEL framework, Densenet161, InceptionV3,
+We chose 5 base models for FLANNEL framework: Densenet161, InceptionV3,
 Resnet152, ResneXt101 and Vgg19\_bn. These models were fine-tuned using default
 parameter values, settings and by using the Adam optimizer. We compared FLANNEL
 with these 5 base models of the framework.
@@ -484,18 +486,27 @@ with these 5 base models of the framework.
 We trained the FC-DenseNET 103 segmentation model successfully and produced
 masked CXR images that only display the lung area for the updated FLANNEL
 dataset. We also created and trained patch-based versions of the original
-FLANNELl base models that usemasked CXR images. We performed the FLANNEL
+FLANNEL base models that use masked CXR images. We performed the FLANNEL
 ensemble with the results of the patch-based classifiers and compared the
 performance with the original FLANNEL architecture.
 
-The FC-DenseNet103 segmentation model was implemented in PyTorch and trained on a NVIDIA 1080 GPU. The operating system was windows 10 pro and python 3.8 was used.
+\subsection{Implementation details}
+Segmentation model (FC-DenseNet103), patched FLANNEL base and ensemble models
+are implemented in PyTorch. Segmentation model is trained on NVIDIA GTX1080 GPU
+on a Windows 10 desktop. Rest of the models are trained on AWS p3.2xlarge EC2
+(virtual machine) instances featuring NVIDIA Tesla V100 GPUs on Ubuntu 18.04.
+The base models are fine tuned using weights from pre-trained
+models. The data are augmented with random flips, crops and scaling during the
+fine tuning process.
 
-We are planning to create and train patch-based versions of the base models
-that will use the masked version of the same images from the dataset. We will
-then re-run the FLANNEL with the patch-based models and compare performance.
-In addition to the improvements, we are  also planning to compare 2 recent
-COVID-19 deep learning models, COVID-Net \cite{wang2020covidnet} and AI-COVID
-\cite{pmid32339081}.
+We created and trained patch-based versions in the same environment as the
+original FLANNEL base learners. The primary difference was that the dataset fed
+to the patch-based learners was the masked CXR images. Since the CXR images were
+already masked, no random flips, crops or scaling was applied to the data for
+training.
+
+After the base models are trained, the FLANNEL ensemble is trained by passing in
+the concatenated output layers of the base models as the input features.
 
 
 \subsection{Evaluation strategy}
@@ -508,35 +519,17 @@ For each class of image, we record precision and recall values for each fold.
 We calculate F1-score for each fold and then average them to calculate the mean
 F1 score.
 
-We are evaluating the global base models independently, the global ensemble,
-the patch-based models independently and the patch-based ensemble.
+We evaluate original FLANNEL \textit{global} \footnote{Complete image as input
+instead of patch} base models independently, the global ensemble model, the
+patch-based base models independently and the patch-based FLANNEL ensemble model.
 
 \subsection{Implementation Details}
-The FC-DenseNet103 segmentation model was implemented in PyTorch and trained on
-a NVIDIA 1080 GPU. The operating system was windows 10 pro and python 3.8 was
-used.
 
-FLANNEL with patch-based classification are implemented in PyTorch and are
-trained on 4 different Amazon Web Services Elastic Compute Cloud virtual
-machines each featuring a single NVIDIA Tesla V100 GPU. The base models are fine
-tuned using pre-trained models. The data are augmented with random flips, crops
-and scaling during the fine tuning process.
-
-
-We created and trained patch-based versions in the same environment as the
-original FLANNEL base learners. The primary difference was that the dataset fed
-to the patch-based learners was the masked CXR images. Since the CXR images were
-already masked, no random flips, crops or scaling was applied to the data for
-training.
-
-
-After the base models are trained, FLANNEL is trained by passing in the
-concatenated output layers of the base models as the input features.
 
 \subsection{Experimental Results}
 \subsubsection{Segmentation Training}
 Training the Segmentation Network on the JSRT/SCR dataset had a Jaccard Index
-(JI) score of 93.39\% for creating the lung contour masks. The figure \ref{fig:segtrain}
+(JI) score of 93.39\% for creating the lung contour masks. The Figure \ref{fig:segtrain}
 shows the mask creation and applying the mask on the image.
 
 \begin{figure}[h]
@@ -551,14 +544,15 @@ In this section, we compare original FLANNEL base models and ensemble
 performance with the patched FLANNEL. Because COVID-19 class is heavily
 imbalanced compared to other categories, overall accuracy would not be the
 appropriate measure for performance evaluation. It would not be able to show
-performance increase in COVID-19 detection, So instead we use F1-score for COVID-19
-vs rest comparing the different models. As shown in figure \ref{fig:f1score}, we
-can see the ensemble approach in the original FLANNEL clearly outperforms
-state-of-the-art base models in detecting COVID-19. We however, don’t see the
-same performance gain in the patched FLANNEL approach where ensemble performance
-is slightly worse than the base models. We see a 1.17\% decrease in F1-score
-compared to original FLANNEL model. We do notice significant improvement in all patched base
-models compared to the original base models for COVID-19 detection.
+performance increase in COVID-19 detection, So instead we use F1-score for
+COVID-19 vs rest comparing the different models. As shown in Figure
+\ref{fig:f1score}, we can see the ensemble approach in the original FLANNEL
+clearly outperforms state-of-the-art base models in detecting COVID-19. We
+however, don’t see the same performance gain in the patched FLANNEL approach
+where ensemble performance is slightly worse than the original FLANNEL model. We
+see a 1.17\% decrease in F1-score compared to original FLANNEL model. We do
+notice significant improvement in all patched base models compared to the
+original base models for COVID-19 detection.
 
 \begin{figure*}[h]
     \centering
@@ -651,15 +645,27 @@ performing better than others.
 
 \section{Discussion}
 
-Training the original FLANNEL model was extremely slow already where training a
-single model takes on average 6 hours. When using the original architecture for
-the patch-based models, their training process was even slower due to two
-reasons. The first is that the patch-base model dataloader was originally
-responsible for applying the mask to the cxr image, this was addressed by
-transitioning the responsibility to the segmentation task to immediately apply
-the mask to the CXR. The second reason for the patch-based models being slow is
-that a classification is run for each patch sequentially. This increases the
-complexity from N to kN where k is the number of patches. We were unable to
+We realized very early in the project that running FLANNEL model using five base
+models and 200 epochs for five folds is going to take at least 3-4 days on a
+high end GPU (Tesla V100 GPU or equivalent). We had to find a solution on both
+cost and runtime in order to have results early. We tried multiple optimization
+methods such as increasing the number of workers, mounting training images in
+memory to bring the runtime down. We also used spot instances in parallel to
+bring the cost down. We were able to faithfully reproduce original FLANNEL and
+complete patched FLANNEL in a considerable short time with significantly low
+cost. It took us 36 hours (144 compute hours) for original FLANNEL and 10 hours
+(800 compute hours) for patched FLANNEL. The whole project costed us around
+\$300.
+
+Training the original FLANNEL model is already extremely slow as training single
+model takes on average 2-3 hours. When using the original architecture for the
+patch-based models, the training process was even slower due to two reasons. The
+first is that the patch-base model data-loader was originally responsible for
+applying the mask to the CXR image, this was addressed by transitioning the
+responsibility to the segmentation task to immediately apply the mask to the
+CXR. The second reason for the patch-based models being slow is that a
+classification is run for each patch sequentially. This increases the complexity
+from $N$ to $k\times N$ where $k$ is the number of patches. We were unable to
 address this due to time constraints but we believe parallelizing the patch
 predictions could lead to major improvements.
 
@@ -667,10 +673,10 @@ After training the patch-based models we were hoping to see substantial
 improvements similar to Park et al. but we only noticed minor changes in
 performance where some models slightly increased while others decreased. Two
 models that had an increase in average precision performance were inceptionv3
-and densenet161. While resnet152, resnext101 and vgg19 had minor decreases in
-average precision. Even though three of the base-models had decreased
+and densenet161. While resnet152, resnext101 and vgg19\_bn had minor decreases
+in average precision. Even though three of the base-models had decreased
 performance, the patched ensemble still had a minor improvement over the base
-ensemble in average precision by 0.01. We were originally hopeful to have more
+ensemble in average precision by 1\%. We were originally hopeful to have more
 significant increases in performance. Some of the reasons that could explain
 this result is the segmentation that generated the masked CXR is inaccurate and
 is masking important information surrounding the edges of the lungs. This
@@ -680,22 +686,12 @@ areas of a CXR are less important than the global patterns detected within a
 lung. This hypothesis can potentially be tested by increasing the patch size and
 measuring performance again.
 
-Running FLANNEL with improved data distribution We realized very early in the
-project that running FLANNEL model using five base models and 200 epochs for
-five folds is going to take at least 3-4 days on a Tesla V100 GPU or
-equivalent. We had to find a solution on both cost and runtime in order to have
-results early. We tried multiple optimization methods such as increasing the
-number of workers, mounting training images in memory to bring the runtime down.
-We also used spot instances in parallel to bring the cost down. We were able to
-complete training and evaluation of the FLANNEL model in 36 hours and
-considerably less cost around 100 dollars.
-
 Some changes we made that could have decreased the patch-based model performance
 are removing the weight assignment step from the patch classifier and limiting
-the training ti 100 epochs. The weight assignment step was removed because we
+the training to 100 epochs. The weight assignment step was removed because we
 thought the probabilities of the classification output were already being passed
-through an ensemble method where a neural network learns more weights.
-
+through an ensemble method where a neural network learns appropriate weights
+based on class imbalance.
 
 
 \section{Conclusion}
@@ -706,7 +702,7 @@ performance of FLANNEL model.
 
 We ran the base models and FLANNEL ensemble on the new dataset using all five
 folds and 200 epochs. With the improved distribution of COVID-19 data we see
-FLANNEL outperforms the metrics as seen in the Original FLANNEL paper by 13\%.
+FLANNEL outperforms the metrics as seen in the original FLANNEL paper by 13\%.
 This large increase in performance highlights the importance of curating a rich
 dataset.
 
@@ -719,7 +715,7 @@ a slight decrease. We then ran the ensemble on the outputs of the patch-based
 classifier and did not note major improvement in classification performance. For
 COVID-19, ensemble on patched classifiers performed slightly worse than Original
 FLANNEL ensemble. However, for overall classification the average precision
-increased by 0.01 over the Original FLANNEL.
+increased by 1\% over the Original FLANNEL.
 
 We were able to complete patch classifier run earlier than Original FLANNEL
 (stage-1 and stage-2) where early stopping and less epochs (100 vs 200 epochs
@@ -729,8 +725,6 @@ We were partially able to achieve our goal of improving the original FLANNEL
 architecture using patch-based models. Even though the performance was slightly
 increased, we see both Original FLANNEL and Patched FLANNEL clearly outperforms
 the other base models.
-
-
 
 \section{Contribution}
 
@@ -750,10 +744,6 @@ GitHub documentation
 
 \textbf{Srikanth:} segmentation, patch-based classification development, project
 report,GitHub documentation
-
-
-
-
 
 \section{Acknowledgement}
 GitHub source code for both FLANNEL and Patch-by-Patch classification
