Add presentation video

--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -740,10 +740,10 @@ output graphs, presentation slide, project report, GitHub
 documentation
 
 \textbf{Satish:} FLANNEL checkpoints, output graphs and reports development,
-GitHub documentation
+GitHub documentation, presentation video
 
 \textbf{Srikanth:} segmentation, patch-based classification development, project
-report,GitHub documentation
+report,GitHub documentation, presentation video
 
 \section{Acknowledgement}
 GitHub source code for both FLANNEL and Patch-by-Patch classification
