fix grammatical error in project report

--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -729,7 +729,7 @@ the other base models.
 \section{Contribution}
 
 All authors were actively involved in Patched FLANNEL development and
-implementation. Major contribution from authors are:
+implementation. Major contributions from authors are:
 
 \textbf{Maneesh:} AWS Setup, batch run of FLANNEL and patch-based models on
 AWS, patch-based classification and ensemble model development, project
