--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -715,8 +715,8 @@ ensemble on patched classifiers performed slightly worse than Original FLANNEL
 ensemble. However, for overall classification the average precision increased
 by 1\% over the Original FLANNEL.
 
-Due to limited time, we only trained Patched FLANNEL for 100 epochs which is
-much less than Original FLANNEL (stage-1 and stage-2) at 200 epochs
+We trained patched base models for 100 epochs as done in the patch
+classification paper and patched FLANNEL ensemble for 200 epochs.
 
 We were partially able to achieve our goal of improving the original FLANNEL
 architecture using patch-based models. Even though the performance was slightly
