Add presentation video URL

--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -10,7 +10,7 @@
 % 'entered' - IF NEED BE. --- End of author Metadata ---
 
 \title{Patched-FLANNEL: COVID-19 X-ray Image Classification}
-%\subtitle{[Extended Abstract]
+\subtitle{\url{https://mediaspace.illinois.edu/media/t/1_atvzrp1d}}
 
 \numberofauthors{4}
 
